RESOLVED FIXED151617
Fix the !ENABLE(DFG_JIT) build after r190735
https://bugs.webkit.org/show_bug.cgi?id=151617
Summary Fix the !ENABLE(DFG_JIT) build after r190735
Csaba Osztrogonác
Reported 2015-11-26 04:25:49 PST
https://trac.webkit.org/changeset/190735 broke the !ENABLE(DFG_JIT) build: ../../Source/JavaScriptCore/jit/GCAwareJITStubRoutine.cpp: In member function 'virtual void JSC::GCAwareJITStubRoutineWithExceptionHandler::observeZeroRefCount()': ../../Source/JavaScriptCore/jit/GCAwareJITStubRoutine.cpp:119:64: error: invalid use of incomplete type 'class JSC::DFG::CommonData' In file included from ../../Source/JavaScriptCore/runtime/Executable.h:37:0, from ../../Source/JavaScriptCore/runtime/JSFunctionInlines.h:29, from ../../Source/JavaScriptCore/bytecode/PolymorphicAccess.h:32, from ../../Source/JavaScriptCore/bytecode/StructureStubInfo.h:36, from ../../Source/JavaScriptCore/bytecode/ByValInfo.h:35, from ../../Source/JavaScriptCore/bytecode/CodeBlock.h:34, from ../../Source/JavaScriptCore/jit/GCAwareJITStubRoutine.cpp:31: ../../Source/JavaScriptCore/jit/JITCode.h:39:7: error: forward declaration of 'class JSC::DFG::CommonData' It is obvious that using dfgCommon() outside of ENABLE(DFG_JIT) is incorrect. But I don't know what would be the proper behaviour here without DFG JIT.
Attachments
Patch (1.62 KB, patch)
2015-12-04 03:08 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-11-30 22:12:16 PST
Any idea how to fix this build break properly?
Filip Pizlo
Comment 2 2015-11-30 22:25:51 PST
(In reply to comment #1) > Any idea how to fix this build break properly? I believe that the entire "if (m_codeBlockWithExceptionHandler) {...}" block could be inside #if ENABLE(DFG_JIT).
Csaba Osztrogonác
Comment 3 2015-12-04 03:08:48 PST
WebKit Commit Bot
Comment 4 2015-12-04 10:08:44 PST
Comment on attachment 266614 [details] Patch Clearing flags on attachment: 266614 Committed r193423: <http://trac.webkit.org/changeset/193423>
WebKit Commit Bot
Comment 5 2015-12-04 10:08:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.