Fix the !ENABLE(DFG_JIT) build after r190735 https://bugs.webkit.org/show_bug.cgi?id=151617

Reviewed by Filip Pizlo.

* jit/GCAwareJITStubRoutine.cpp:
(JSC::GCAwareJITStubRoutineWithExceptionHandler::observeZeroRefCount):


Canonical link: https://commits.webkit.org/170000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193423 268f45cc-cd09-0410-ab3c-d52691b4dbfc